--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=Humami
 spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.port=${MONGO_PORT}
 spring.data.mongodb.database=${MONGO_DB}
-openai.api.key=${OPENAI_API_KEY}
+embedding.api.url=
+embedding.api.key=
