--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,14 @@
             <version>0.24.0</version>
         </dependency>
         <dependency>
-            <groupId>ai.djl</groupId>
-            <artifactId>pytorch-engine</artifactId>
-            <version>0.24.0</version>
-        </dependency>
-        <dependency>
             <groupId>ai.djl.huggingface</groupId>
             <artifactId>tokenizers</artifactId>
             <version>0.24.0</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.130</version> <!-- Usa la última versión disponible -->
         </dependency>
     </dependencies>
     <build>
