--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.data.mongodb.port=${MONGO_PORT}
 spring.data.mongodb.database=${MONGO_DB}
 embedding.api.url=
 embedding.api.key=
+aws.s3.endpoint=http://localhost:9000
+aws.s3.region=us-east-1
+aws.s3.bucket-name=humami
+aws.s3.access-key=admin
+aws.s3.secret-key=admin123
