--- a/humami-backend/src/main/resources/application.properties
+++ b/humami-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Humami
-spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.port=${MONGO_PORT}
-spring.data.mongodb.database=${MONGO_DB}
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=tastecraft
 embedding.api.url=
 embedding.api.key=
 aws.s3.endpoint=http://localhost:9000
