add nginx configuration, update compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,47 +8,85 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    profiles: ["local", "prod"]
 
   s3:
     image: minio/minio
     container_name: humami-s3
     ports:
-      - "9000:9000"      # API
-      - "9001:9001"      # Console
+      - "9000:9000"
+      - "9001:9001"
+    env_file:
+      - .env      
     environment:
-      MINIO_ROOT_USER: humami
-      MINIO_ROOT_PASSWORD: humami123
+      MINIO_ROOT_USER: ${S3_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY}
     volumes:
       - minio-data:/data
     command: server /data --console-address ":9001"
+    profiles: ["local", "prod"]
 
   backend:
     build:
       context: ./humami-backend
       dockerfile: Dockerfile
     container_name: humami-backend
+    expose:
+      - "8080"
     ports:
       - "8080:8080"
     depends_on:
       - mongo
       - s3
+    env_file:
+      - .env      
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/humami
-      S3_ENDPOINT: http://s3:9000
-      S3_ACCESS_KEY: humami
-      S3_SECRET_KEY: humami123
+      SPRING_DATA_MONGODB_URI: ${SPRING_DATA_MONGODB_URI}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+    profiles: ["local", "prod"]
 
   frontend:
     build:
       context: ./humami-web
       dockerfile: Dockerfile
     container_name: humami-frontend
+    expose:
+      - "3000"
     ports:
-      - "3000:3000"
+      - "3000:3000"  # Solo útil en local
     depends_on:
       - backend
+    env_file:
+      - .env
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:8080
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    profiles: ["local", "prod"]
+
+  nginx:
+    image: nginx:alpine
+    container_name: humami-nginx
+    depends_on:
+      - frontend
+      - backend
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    profiles: ["prod"]
+
+  certbot:
+    image: certbot/certbot
+    container_name: humami-certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    profiles: ["prod"]
 
 volumes:
   mongo-data:
