--- a/humami-backend/Dockerfile
+++ b/humami-backend/Dockerfile
@@ -1,4 +1,17 @@
+# Build
+FROM eclipse-temurin:21-jdk-alpine AS builder
+WORKDIR /app
+
+COPY .mvn .mvn
+COPY mvnw .
+COPY pom.xml .
+COPY src ./src
+
+RUN chmod +x mvnw && ./mvnw clean package -DskipTests
+
+# Runtime
 FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
-COPY humami-backend.jar app.jar
+
+COPY --from=builder /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
