--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/humami.es/privkey.pem;
 
   location /api/ {
-    proxy_pass http://backend:8080/;
+    proxy_pass http://backend:8080/api;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
