--- a/humami-backend/src/main/resources/application.properties
+++ b/humami-backend/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=humami
 embedding.api.url=
 embedding.api.key=
-aws.s3.endpoint=http://localhost:9000
 aws.s3.region=us-east-1
 aws.s3.bucket-name=humami
-aws.s3.access-key=admin
-aws.s3.secret-key=admin123
+aws.s3.access-key=
+aws.s3.secret-key=
